Enhance CORS and Security configuration
- Updated CorsConfig to trim trailing slashes from allowed origins and expanded allowed methods and headers for improved CORS support.
- Modified SecurityConfig to permit OPTIONS requests for all endpoints, enhancing preflight request handling.